=================
Changes for Crate
=================

Unreleased
==========

 - Added a limitation notice that `COPY TO` doesn't work with system tables and
   attempting to do so will result in a more meaningful error.

 - Fixed bulk delete for partitioned tables where partition column was part
   of the where clause

 - Fixed a rare race condition that could cause some queries with offset + limit higher
   than 1_000_000 to return too few rows

 - Fixed an issue that could cause concurrent queries on information_schema or
   sys tables to return inconsistent results

 - Fix: IS NULL predicate in query could return records that have already been
   marked for deletion

 - Fixed a possible race condition which leads to the execution of a
   non-distributed group by instead of a distributed one.

 - Added ``date_format`` scalar function

 - Fixed hash collide in fetch requests to avoid collision of node identifiers

 - Updated crate-admin to 0.14.0 which includes following changes:

    - load plugins.json that can inject additional modules on app start
      the "Get Started" tutorial is now implemented as a plugin

    - fix: approximate number of underreplicated and missing records per table was
      calculated incorrectly, which could have lead to different results
      when viewing table info on admin ui of different nodes

    - fix: automatically refresh load history chart on overview page

2015/06/30 0.49.4
=================

 - Fixed issue that could lead to deadlock and therefore freezing of a node
   when there where too many queries asking for routing information in parallel.

 - Fix: Querying from information_schema while a table is created could
   cause an error

 - only log amazon s3 client stuff on level ``WARN``

 - log failing uri on COPY FROM

 - Fixed a NPE that was thrown if a SELECT statement contained `_score` in the
   result columns and an ORDER BY clause.

 - Fix: selecting error from sys.jobs_log caused a NPE in some cases
