@@ -26,6 +26,7 @@ import com.google.common.base.Functions;
 import com.google.common.base.Predicates;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Iterables;
+import com.google.common.collect.Lists;
 import com.google.common.util.concurrent.FutureCallback;
 import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
@@ -80,6 +81,7 @@ import javax.annotation.Nullable;
 import java.io.IOException;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicReference;
 
 /**
  * visitor that dispatches requests based on Analysis class to different actions.
@@ -315,14 +317,22 @@ public class DDLStatementDispatcher extends AnalyzedStatementVisitor<UUID, Liste
 
     @Override
     public ListenableFuture<Long> visitRefreshTableStatement(RefreshTableAnalyzedStatement analysis, UUID jobId) {
-        String[] indexNames = getIndexNames(analysis.table(), analysis.partitionName());
-        if (analysis.table().schemaInfo().systemSchema() || indexNames.length == 0) {
-            // shortcut when refreshing on system tables
-            // or empty partitioned tables
+        Map partitionNames = analysis.partitions();
+        Set<String> indexNameSet = new HashSet<>();
+
+        for (TableInfo tableInfo : analysis.tables()) {
+            if (!tableInfo.schemaInfo().systemSchema()) {
+                String[] indexNames = getIndexNames(tableInfo, (PartitionName) partitionNames.get(tableInfo));
+                indexNameSet.addAll(Arrays.asList(indexNames));
+            }
+        }
+        if (indexNameSet.isEmpty()) {
             return Futures.immediateFuture(null);
-        } else {
-            final SettableFuture<Long> future = SettableFuture.create();
-            RefreshRequest request = new RefreshRequest(indexNames);
+        }
+
+        final SettableFuture<Long> future = SettableFuture.create();
+
+            RefreshRequest request = new RefreshRequest(indexNameSet.toArray(new String[indexNameSet.size()]));
             transportActionProvider.transportRefreshAction().execute(request, new ActionListener<RefreshResponse>() {
                 @Override
                 public void onResponse(RefreshResponse refreshResponse) {
@@ -334,8 +344,9 @@ public class DDLStatementDispatcher extends AnalyzedStatementVisitor<UUID, Liste
                     future.setException(e);
                 }
             });
-            return future;
-        }
+
+
+        return future;
     }
 
     private ListenableFuture<Long> wrapRowCountFuture(ListenableFuture<?> wrappedFuture, final Long rowCount) {
